# icarus

./: Cargo.toml  README.md
src/: client.rs  error.rs  lib.rs  query.rs  update.rs  url.rs
